<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:layout_margin="8dp"
    android:elevation="8dp"
    app:cardElevation="8dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/IMG_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:background="@color/white"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_name"
                android:textSize="15sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:background="@color/white"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_address"
                android:textSize="15sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:background="@color/white"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_phone"
                android:textSize="15sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:background="@color/white"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_email"
                android:textSize="15sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_request"
                android:textSize="15sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold"
                android:padding="5dp" />

            <TextView
                android:id="@+id/request_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:background="@color/white"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/user_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_user"
                android:textSize="15sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:layout_marginStart="10dp"
                android:textSize="15sp"
                android:textColor="@color/darkGreen"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
