<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighterGreen"
    tools:context=".SurActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/IMG_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_need"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textColor="@color/darkGreen"
        android:layout_marginTop="90dp"
        android:textSize="44sp"
        android:textStyle="italic"
        android:background="@color/white"
        />


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/hotmeal_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/lightGreen"
        android:text="@string/hotmMeal"
        android:textColor="@color/darkGreen"
        android:textSize="20sp"
        android:textStyle="italic" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/groceries_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="300dp"
        android:backgroundTint="@color/lightGreen"
        android:text="@string/groceries"
        android:textColor="@color/darkGreen"
        android:textSize="20sp"
        android:textStyle="italic" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/medications_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="400dp"
        android:backgroundTint="@color/lightGreen"
        android:text="@string/medication"
        android:textColor="@color/darkGreen"
        android:textSize="20sp"
        android:textStyle="italic" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/company_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="500dp"
        android:backgroundTint="@color/lightGreen"
        android:text="@string/company"
        android:textColor="@color/darkGreen"
        android:textSize="20sp"
        android:textStyle="italic" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/clothes_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="600dp"
        android:backgroundTint="@color/lightGreen"
        android:text="@string/clothes"
        android:textColor="@color/darkGreen"
        android:textSize="20sp"
        android:textStyle="italic" />

</RelativeLayout>