<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighterGreen"
    tools:context=".AddSurActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/IMG_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_details"
        android:layout_centerHorizontal="true"
        android:textColor="@color/darkGreen"
        android:layout_marginTop="140dp"
        android:textSize="26sp"
        android:textStyle="italic"
        android:background="@color/white" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/add_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentStart="true"
        android:text="@string/add_id"
        android:textColor="@color/darkGreen"
        android:layout_marginTop="330dp"
        android:textStyle="bold"
        android:background="@color/white" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/id_text"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_toEndOf="@id/add_id_label"
        android:layout_marginTop="320dp"
        android:textColorHint="@color/darkGreen"
        android:textColor="@color/darkGreen"
        android:hint="@string/id" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/next_button"
        android:layout_width="210dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="590dp"
        android:backgroundTint="@color/lightGreen"
        android:text="@string/add_to_list"
        android:textColor="@color/darkGreen"
        android:textSize="40sp"
        android:textStyle="italic" />

</RelativeLayout>
